collectors/services/dc-grafana/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dc-grafana-deployment
  namespace: collectors
  labels:
    app: dc-grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dc-grafana
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: dc-grafana
    spec:
      containers:
      - name: dc-grafana
        image: smartemission/se-grafana-dc:5.1.3-8
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 60
          timeoutSeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 60
          timeoutSeconds: 30
          periodSeconds: 10
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 3000
