collectors/services/dc-grafana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dc-grafana
  namespace: collectors
  labels:
    app: dc-grafana
spec:
  ports:
  - port: 3000
  selector:
    app: dc-grafana
