collectors/services/dc-grafana/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dc-grafana
  namespace: collectors
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  tls:
  - secretName: pdok-smartemission-nl-tls
    hosts:
    - pdok.smartemission.nl
  rules:
  - host: pdok.smartemission.nl
    http:
      paths:
      - path: /grafana-dc
        backend:
          serviceName: dc-grafana
          servicePort: 3000
